--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: false
 header:
   overlay_image: /assets/images/banner.jpg
   overlay_filter: 0.5
-  cta_label: "View Events"
+  cta_label: "View Community Events"
   cta_url: "/events/"
 excerpt: "We stay strong by building a community together."
 sidebar:
