--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,10 +3,14 @@ title: "Contact Us"
 permalink: /contact/
 ---
 
-<form action="https://formspree.io/pdxchinesehub@gmail.com" method="POST" style="width: 600px">
+<form action="https://formspree.io/hzhao@pdxchinese.org" method="POST" style="width: 600px">
   <input type="text" name="name" placeholder="Your name">
   <input type="email" name="email" placeholder="Your email">
   <input type="text" name="subject" placeholder="Subject">
   <textarea name="message" placeholder="Your message" style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
+
+Also follow us
+
+<a href="https://www.facebook.com/groups/ChineseInNW/"><img src="/assets/images/logo/fb.png"></a>
