--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -13,4 +13,4 @@ permalink: /contact/
 
 Also follow us
 
-<a href="https://www.facebook.com/groups/ChineseInNW/"><img src="/assets/images/logo/fb.png"></a>
+<a href="https://www.facebook.com/groups/ChineseInNW/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
