--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -11,8 +11,10 @@ permalink: /contact/
   <button type="submit">Send</button>
 </form>
 
-<br><br><br>
+<br>
 
-Also follow us
+Also follow us on
+
+<br>
 
 <a href="https://www.facebook.com/groups/ChineseInNW/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
