--- a/_pages/resources/activities/healthy.html
+++ b/_pages/resources/activities/healthy.html
@@ -4,6 +4,8 @@ permalink: /resources/activities/healthy/
 layout: single
 ---
 
+This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+
 {% for lifestyle in site.activities_healthy %}
   <a href="{{ lifestyle.url }}"><h2>{{ lifestyle.title }}</h2></a>
   <p>{{ lifestyle.location }}</p>
