--- a/_pages/resources/activities/artinstitute.html
+++ b/_pages/resources/activities/artinstitute.html
@@ -4,6 +4,8 @@ permalink: /resources/activities/artinstitute/
 layout: single
 ---
 
+This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+
 {% for group in site.activities_artinstitute %}
   <a href="{{ group.url }}"><h2>{{ group.title }}</h2></a>
   <p>{{ group.location }}</p>
