--- a/_pages/resources/communities/culture.html
+++ b/_pages/resources/communities/culture.html
@@ -4,6 +4,8 @@ permalink: /resources/communities/culture/
 layout: single
 ---
 
+This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+
 {% for object in site.communities_culture %}
   <a href="{{ object.url }}"><h2>{{ object.title }}</h2></a>
 {% endfor %}
