--- a/_pages/resources/communities/nonprofits.html
+++ b/_pages/resources/communities/nonprofits.html
@@ -4,6 +4,8 @@ permalink: /resources/communities/nonprofits/
 layout: single
 ---
 
+This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+
 {% for nonprofit in site.communities_nonprofits %}
   <a href="{{ nonprofit.url }}"><h2>{{ nonprofit.title }}</h2></a>
 {% endfor %}
