--- a/_pages/resources/activities/academies.html
+++ b/_pages/resources/activities/academies.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/academies/
 layout: single
 ---
 
-This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+[Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
 {% for academy in site.activities_academies %}
   <a href="{{ academy.url }}"><h2>{{ academy.title }}</h2></a>
