--- a/_pages/resources/activities/sports.html
+++ b/_pages/resources/activities/sports.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/sports/
 layout: single
 ---
 
-This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+[Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
 {% for sport in site.activities_sports %}
   <a href="{{ sport.url }}"><h2>{{ sport.title }}</h2></a>
