--- a/_pages/resources/communities/religious.html
+++ b/_pages/resources/communities/religious.html
@@ -4,7 +4,7 @@ permalink: /resources/communities/religious/
 layout: single
 ---
 
-This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+[Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
 {% for group in site.communities_religious %}
   <a href="{{ group.url }}"><h2>{{ group.title }}</h2></a>
