--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   overlay_filter: 0.5
   cta_label: "View Community Events"
   cta_url: "/events/"
-excerpt: "We stay strong by building a community together."
+excerpt: "We stay strong by building a community [together](http://www.google.com)."
 sidebar:
   nav: "extra"
 ---
