--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   overlay_filter: 0.5
   cta_label: "View Community Events"
   cta_url: "/events/"
-excerpt: "New: [Youth Roundtable](http://pdxchinese.org/youthroundtable/)   [Use Your Political Tax Credit](http://oregontaxcredit.com/)."
+excerpt: "Now: 1.[Youth Roundtable](http://pdxchinese.org/youthroundtable/)   2.[Use Your Political Tax Credit](http://oregontaxcredit.com/)."
 sidebar:
   nav: "extra"
 ---
