--- a/_pages/resources/communities/media.html
+++ b/_pages/resources/communities/media.html
@@ -6,6 +6,6 @@ layout: single
 
 [Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
-{% for club in site.communities_clubs %}
-  <a href="{{ club.url }}"><h2>{{ club.title }}</h2></a>
+{% for media in site.communities_media %}
+  <a href="{{ media.url }}"><h2>{{ media.title }}</h2></a>
 {% endfor %}
