--- a/_pages/resources/activities/artinstitute.html
+++ b/_pages/resources/activities/artinstitute.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/artinstitute/
 layout: single
 ---
 
-[Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
 {% for group in site.activities_artinstitute %}
   <a href="{{ group.url }}"><h2>{{ group.title }}</h2></a>
