--- a/_pages/resources/communities/media.html
+++ b/_pages/resources/communities/media.html
@@ -4,7 +4,7 @@ permalink: /resources/communities/media/
 layout: single
 ---
 
-[Disclaimer] This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
 
 {% for media in site.communities_media %}
   <a href="{{ media.url }}"><h2>{{ media.title }}</h2></a>
