--- a/_pages/chinatown.html
+++ b/_pages/chinatown.html
@@ -11,6 +11,12 @@ A century ago, Portland had the second largest Chinese population next to San Fr
 <p><img src="/assets/images/chinatown/chinatown2small.jpg"></p>
 Illustrations by Wayne Chin
 
+<h2>Portland Chinatown Chinese New Year Celebration</h2>
+
+{% for gallery in site.chinatown_newyear %}
+  <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
+{% endfor %}
+
 <h2>Portland Chinatown Performance Photo Galleries</h2>
 
 <p>【4/27/2016 西北兆】记得我们在大群里从纽约的梁警官聊到咱们眼皮底下的中国城，华人的境地似乎是与我们自己的 感觉出入得不是一点半点。对于没落的老城中国城，虽然是这么多年来华人和华人社团在不断地 努力着，但是，看结果就明白了，华人已经基本上不在游戏之中了。</p>
