--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -13,6 +13,12 @@ permalink: /contact/
 
 <br>
 
+To join our email distribution list, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzg1vXdKx2cR9JyiEgNq97HhWnoI4e3tYkaKlpmexfwJa4tw/viewform?c=0&w=1">Google form</a>.
+
+We typically make the announcements on WeChat groups. Considering each WeChat group is limited to 500 people, we will still need to rely on emailing to reach out to community members and those who are interested to know what is happening in our community.
+
+<br>
+
 Also follow us on
 
 <br><br>
