--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -17,7 +17,7 @@ To join our email distribution list, please fill out the <a href="https://docs.g
 
 <br><br>
 
-We typically make the announcements on WeChat groups. Considering each WeChat group is limited to 500 people, we will still need to rely on emailing to reach out to community members and those who are interested to know what is happening in our community.
+We typically make the announcements in major WeChat groups. Considering each WeChat group is limited to 500 people, we will still need to rely on emailing to reach out to community members and those who are interested to know what is happening in our community.
 
 <br><br>
 
