--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -13,7 +13,7 @@ permalink: /contact/
 
 <br>
 
-To join our email distribution list, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzg1vXdKx2cR9JyiEgNq97HhWnoI4e3tYkaKlpmexfwJa4tw/viewform?c=0&w=1">Google form</a>.
+To join our <b>email distribution list</b>, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzg1vXdKx2cR9JyiEgNq97HhWnoI4e3tYkaKlpmexfwJa4tw/viewform?c=0&w=1">Google form</a>.
 
 <br><br>
 
