--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ author_profile: false
 header:
   overlay_image: /assets/images/banner.jpg
   overlay_filter: 0.5
-  cta_label: "View Community Events"
+  cta_label: "Community Calendar"
   cta_url: "/events/"
 excerpt: "We stay strong by building a community"
 sidebar:
   nav: "extra"
-announcement_image: 
+announcement_image:
 ---
