--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -25,4 +25,4 @@ Also follow us on
 
 <br><br>
 
-<a href="https://www.facebook.com/groups/ChineseInNW/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
+<a href="https://www.facebook.com/Oregon-Chinese-Coalition-568850810154157/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
