--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "We stay strong by building a community"
 sidebar:
   nav: "extra"
-announcement_image:  /assets/images/activities/banner1.jpg
+announcement_image:  /assets/images/banner1.jpg
 ---
