--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "We stay strong by building a community"
 sidebar:
   nav: "extra"
-announcement_image:  /assets/images/activities/YCFlyer2018.png
+announcement_image:  
 ---
