--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -21,7 +21,13 @@ We typically make the announcements in major WeChat groups. Considering each WeC
 
 <br><br>
 
-Also follow us on
+<b>Mailing Address</b>
+
+c/o Oregon Chinese Coalition
+219 NW 3rd Ave., #227
+Portland, OR 97209  
+
+<b>Also follow us on<b/>
 
 <br><br>
 
