--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -23,9 +23,9 @@ We typically make the announcements in major WeChat groups. Considering each WeC
 
 <b>Mailing Address</b>
 
-c/o Oregon Chinese Coalition
-219 NW 3rd Ave., #227
-Portland, OR 97209  
+c/o Oregon Chinese Coalition<br>219 NW 3rd Ave., #227<br>Portland, OR 97209
+
+<br><br>
 
 <b>Also follow us on<b/>
 
