--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <input type="text" name="name" placeholder="Your name">
   <input type="email" name="email" placeholder="Your email">
   <input type="text" name="subject" placeholder="Subject">
-  <textarea name="message" placeholder="Your message" style="height: 300px"></textarea>
+  <textarea name="message" placeholder="Your message. For mentorship program, you are welcome to request a particular mentor." style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
 
