--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,10 +4,10 @@ permalink: /contact/
 ---
 
 <form action="https://formspree.io/hzhao@pdxchinese.org" method="POST" style="width: 600px">
-  <input type="text" name="name" placeholder="Your name">
-  <input type="email" name="email" placeholder="Your email">
+  <input type="text" name="name" placeholder="Your Name">
+  <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="subject" placeholder="Subject">
-  <textarea name="message" placeholder="Your message. For mentorship program, you are welcome to request a particular mentor." style="height: 300px"></textarea>
+  <textarea name="message" placeholder="Your message. For mentorship program, you are welcome to request a particular mentor, although you don't have to." style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
 
