--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <input type="text" name="name" placeholder="Your Name">
   <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="subject" placeholder="Subject">
-  <textarea name="message" placeholder="Your message. </br>For mentorship program, you are welcome to request a particular mentor, although you don't have to. We may recommend mentors to you too." style="height: 300px"></textarea>
+  <textarea name="message" placeholder="Your message. For mentorship program, you are welcome to request a particular mentor, although you don't have to. We may recommend mentors to you too." style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
 
