--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <input type="text" name="name" placeholder="Your Name">
   <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="subject" placeholder="Subject">
-  <textarea name="message" placeholder="Your message. [1] For mentorship program, you are welcome to request a particular mentor, although you don't have to. We may recommend mentors to you too. For minors, please let your parent send in the request. [2] For Chinese Festival, please visit pdxchinesefestival.org first for more detailed information." style="height: 300px"></textarea>
+  <textarea name="message" placeholder="Your message. [1] For mentorship program, you are welcome to request a particular mentor, although you don't have to. We may recommend mentors to you. For minors, please let your parent send in the request. [2] For Chinese Festival, please visit pdxchinesefestival.org first for more detailed information." style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
 
