--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <input type="text" name="name" placeholder="Your Name">
   <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="subject" placeholder="Subject">
-  <textarea name="message" placeholder="Your message. [1] For mentorship program, prospective mentee also needs to fill out the application on Youth Mentoring page. [2] For Chinese Festival, please visit pdxchinesefestival.org first for more detailed information." style="height: 300px"></textarea>
+  <textarea name="message" placeholder="Your message. [1] For mentorship program, prospective mentee also needs to fill out the application on Youth Mentoring page. [2] For Chinese Festival, please visit pdxchinesefestival.org for more detailed information." style="height: 300px"></textarea>
   <button type="submit">Send</button>
 </form>
 
