--- a/_pages/chinatown.html
+++ b/_pages/chinatown.html
@@ -20,6 +20,6 @@ A century ago, Portland had the second largest Chinese population next to San Fr
 
 <h2>Chinese Community Against OTCTCA's Rebranding</h2>
 
-{% for gallery in site.chinatown_sayno %}
+{% for gallery in site.chinatown_engage %}
   <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
 {% endfor %}
