--- a/_pages/chinatown.html
+++ b/_pages/chinatown.html
@@ -18,7 +18,7 @@ A century ago, Portland had the second largest Chinese population next to San Fr
   <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
 {% endfor %}
 
-<h2>Chinese Community Against OTCTCA's Rebranding</h2>
+<h2>Community Engagement in Chinatown</h2>
 
 {% for gallery in site.chinatown_engage %}
   <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
