--- a/_pages/chinatown.html
+++ b/_pages/chinatown.html
@@ -23,3 +23,9 @@ A century ago, Portland had the second largest Chinese population next to San Fr
 {% for gallery in site.chinatown_engage %}
   <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
 {% endfor %}
+
+<h2>Wong Laundry Legacy in Chinatown</h2>
+
+{% for gallery in site.chinatown_wonglaundry %}
+  <a href="{{ gallery.url }}"><h3>{{ gallery.title }}</h3></a>
+{% endfor %}
