--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -25,7 +25,7 @@ We typically make the announcements in major WeChat groups. Considering each WeC
 
 <br><br>
 
-c/o Oregon Chinese Coalition<br>219 NW 3rd Ave., #227<br>Portland, OR 97209
+Oregon Chinese Coalition<br>PO Box 1675<br>Beaverton, OR 97075
 
 <br><br>
 
