feat(contact): add twitter link

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -34,3 +34,4 @@ Oregon Chinese Coalition<br>PO Box 1675<br>Beaverton, OR 97075
 <br><br>
 
 <a href="https://www.facebook.com/Oregon-Chinese-Coalition-568850810154157/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
+<a href="https://twitter.com/ChineseOregon"><img src="/assets/images/logo/twitter.png"  width="42" height="42" border="0"></a>
