--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,7 +3,7 @@ title: "Contact Us"
 permalink: /contact/
 ---
 
-<form action="https://formspree.io/hzhao@pdxchinese.org" method="POST" style="width: 600px">
+<form action="https://formspree.io/info@pdxchinese.org" method="POST" style="width: 600px">
   <input type="text" name="name" placeholder="Your Name">
   <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="subject" placeholder="Subject">
