--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "We stay strong by building a community"
 sidebar:
   nav: "extra"
-announcement_image: /assets/images/activities/occresponse.jpg
+announcement_image: <iframe width="969" height="545" src="https://www.youtube.com/embed/Y7OlsWHKcW4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ---
