--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "We stay strong by building a community"
 sidebar:
   nav: "extra"
-announcement_video: "https://www.youtube.com/embed/rtNoj7BFBDs"
+announcement_video: "https://www.youtube.com/embed/Y7OlsWHKcW4"
 ---
