--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: false
 header:
-  overlay_image: /assets/images/banner.jpg
+  overlay_image: /assets/images/logo/background1.jpg
   overlay_filter: 0.5
   cta_label: "Shared Community Calendar"
   cta_url: "/events/"
