--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   overlay_filter: 0.5
   cta_label: "Shared Community Calendar"
   cta_url: "/events/"
-excerpt: "We stay strong by building a community"
+excerpt: "Build a better community together"
 sidebar:
   nav: "extra"
 announcement_video: "https://www.youtube.com/embed/78rfL5ReGVk"
