--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ author_profile: false
 header:
   overlay_image: /assets/images/logo/background5.jpg
   overlay_filter: 0.6
-  cta_label: "Shared Community Calendar"
-  cta_url: "/events/"
+  cta_label: "OCC COVID-19 Response"
+  cta_url: "/coronavirus/"
 excerpt: "Build a better community together"
 sidebar:
   nav: "extra"
