--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   overlay_filter: 0.6
   cta_label: "OCC COVID-19 Response"
   cta_url: "/coronavirus/"
-excerpt: "Build a better community together"
+excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
 announcement_video: "https://www.youtube.com/embed/78rfL5ReGVk"
