--- a/index_bk.html
+++ b/index_bk.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_image: "/assets/images/activities/lifting_hope_2021.jpg.jpg"
+announcement_video: "https://www.youtube.com/embed/Y7OlsWHKcW4"
 ---
