--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_image: /assets/images/activities/lifting_hope_2021.jpg
+announcement_video: "https://www.facebook.com/OregonChineseCoalition/photos/a.569398046766100/1330277670678130/"
 ---
