--- a/index_pic.html
+++ b/index_pic.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_video: "https://www.youtube.com/embed/Y7OlsWHKcW4"
+announcement_image: /assets/images/activities/lifting_hope_2021.jpg
 ---
