--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_video: "https://www.facebook.com/OregonChineseCoalition/photos/a.569398046766100/1330277670678130/"
+announcement_video: "https://www.youtube.com/embed/Y7OlsWHKcW4"
 ---
