--- a/_pages/resources/activities/afterschool.html
+++ b/_pages/resources/activities/afterschool.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/afterschool/
 layout: single
 ---
 
-<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organations  on this page.
 
 {% for program in site.activities_afterschool %}
   <a href="{{ program.url }}"><h2>{{ program.title }}</h2></a>
