--- a/_pages/resources/activities/clubs.html
+++ b/_pages/resources/activities/clubs.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/clubs/
 layout: single
 ---
 
-<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organations  on this page.
 
 {% for club in site.activities_clubs %}
   <a href="{{ club.url }}"><h2>{{ club.title }}</h2></a>
