--- a/_pages/resources/activities/healthy.html
+++ b/_pages/resources/activities/healthy.html
@@ -4,7 +4,7 @@ permalink: /resources/activities/healthy/
 layout: single
 ---
 
-<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organations  on this page.
 
 {% for lifestyle in site.activities_healthy %}
   <a href="{{ lifestyle.url }}"><h2>{{ lifestyle.title }}</h2></a>
