--- a/_pages/resources/communities/organizations.html
+++ b/_pages/resources/communities/organizations.html
@@ -4,7 +4,7 @@ permalink: /resources/communities/organizations/
 layout: single
 ---
 
-<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organzations on this page.
+<b>Disclaimer</b> This is a collection of public data for the convenience of community members. There is no implication of OCC affiliation for the listed organations  on this page.
 
 {% for org in site.communities_organizations %}
   <a href="{{ org.url }}"><h2>{{ org.title }}</h2></a>
