--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -33,5 +33,6 @@ Oregon Chinese Coalition<br>PO Box 1675<br>Beaverton, OR 97075
 
 <br><br>
 
-<a href="https://www.facebook.com/Oregon-Chinese-Coalition-568850810154157/"><img src="/assets/images/logo/fb.png"  width="42" height="42" border="0"></a>
-<a href="https://twitter.com/ChineseOregon"><img src="/assets/images/logo/twitter.png"  width="42" height="42" border="0"></a>
+<a href="https://twitter.com/{{ site.twitter.username }}"><i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i></a>
+<a href="https://facebook.com/{{ site.facebook.username }}"><i class="fa fa-3x fa-facebook-square" aria-hidden="true"></i></a>
+<a href="https://instagram.com/{{ site.instagram.username }}"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a>
