fix(contact): adjust social icon styling

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -29,10 +29,12 @@ Oregon Chinese Coalition<br>PO Box 1675<br>Beaverton, OR 97075
 
 <br><br>
 
-<b>Also follow us on<b/>
+<b>Also follow us on</b>
 
 <br><br>
 
-<a href="https://twitter.com/{{ site.twitter.username }}"><i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i></a>
-<a href="https://facebook.com/{{ site.facebook.username }}"><i class="fa fa-3x fa-facebook-square" aria-hidden="true"></i></a>
-<a href="https://instagram.com/{{ site.instagram.username }}"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a>
+<ul class="social-icons">
+  <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fa fa-3x fa-fw fa-twitter-square" aria-hidden="true"></i></a></li>
+  <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fa fa-3x fa-fw fa-facebook-square" aria-hidden="true"></i></a></li>
+  <li><a href="https://instagram.com/{{ site.instagram.username }}"><i class="fa fa-3x fa-fw fa-instagram" aria-hidden="true"></i></a></li>
+</ul>
