--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_video: "https://www.youtube.com/embed/IPs36aEPRRw"
+announcement_video: "https://www.youtube.com/embed/f8OSgpRUIAM"
 ---
