--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_video: "https://www.youtube.com/embed/N98gtCZJUsU"
+announcement_image: /assets/images/WeChat Image_20210416082503.jpg
 ---
