--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ header:
 excerpt: "Building a better community together"
 sidebar:
   nav: "extra"
-announcement_image: /assets/images/WeChat Image_20210416082503.png
+announcement_image: /assets/images/activities/rise_against_hate.png
 ---
