--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -13,11 +13,13 @@ permalink: /contact/
 
 <br>
 
-To join our <b>email distribution list</b>, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzg1vXdKx2cR9JyiEgNq97HhWnoI4e3tYkaKlpmexfwJa4tw/viewform?c=0&w=1">Google form</a>.
+To join our future <b>email distribution list</b>, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzg1vXdKx2cR9JyiEgNq97HhWnoI4e3tYkaKlpmexfwJa4tw/viewform?c=0&w=1">Google form</a>.
 
 <br><br>
 
 We typically make the announcements in major WeChat groups. Considering each WeChat group is limited to 500 people, we will still need to rely on emailing to reach out to community members and those who are interested to know what is happening in our community.
+
+If you want to volunteer with us and you can read basic Chinese, please consider joining our volunteer WeChat group. We announce and organize all our volunteering opportunities in that group. Once you have installed WeChat application, add 西北兆 as your friend first (by searching WeChat ID: NW_Fan) and then you will be added into that group.
 
 <br><br>
 
